--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
@@ -1,10 +1,10 @@
-@model List<MVC.Presentacion.Models.OrdenCompra.ProductoOCDTO>
+@model  List<MVC.Presentacion.Models.OrdenCompra.OrdenCompraProductoDTO>
 
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "ProductosOC";
-        settings.CallbackRouteValues = new { Controller = "OrdenCompra", Action = "ProductosOCPartial" };
-        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "OrdenCompra", Action = "BatchEditingUpdateModel" };
+        settings.Name = "ProductComplemento";
+        settings.CallbackRouteValues = new { Controller = "OrdenCompra", Action = "ProductComplementoPartial" };
+        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "OrdenCompra", Action = "ProductosComplementoPartialUpdate" };
 
         settings.KeyFieldName = "IdProducto";
 
@@ -24,8 +24,7 @@
         settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.Click;
         settings.ClientSideEvents.BatchEditEndEditing = "OnBatchEditEndEditing";
         settings.Styles.Table.CssClass = "table";
-        settings.SettingsCommandButton.UpdateButton.Text = "Crear";
-        settings.SettingsCommandButton.UpdateButton.Styles.CssPostfix = "btn btn-raised btn-primary btn-round btn-md";
+        //settings.SettingsCommandButton.UpdateButton.Styles.CssPostfix = "btn btn-raised btn-primary btn-round btn-md";
 
         settings.Columns.Add(c =>
         {
@@ -59,7 +58,6 @@
             c.Caption = "Unidad";
             c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
-
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(c =>
@@ -68,17 +66,28 @@
             c.Caption = "Detalle";
             c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
-
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
+        //settings.Columns.Add(c =>
+        //{
+        //    c.FieldName = "CentroCosto";
+        //    c.Caption = "Centro Costo";
+        //    c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+        //    c.Settings.AllowSort = DefaultBoolean.False;
+        //    c.EditFormSettings.Visible = DefaultBoolean.False;
+        //});
         settings.Columns.Add(c =>
         {
-            c.FieldName = "CentroCosto";
+            c.FieldName = "IdCentroCosto";
             c.Caption = "Centro Costo";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
-
-            c.EditFormSettings.Visible = DefaultBoolean.False;
+            c.EditorProperties().ComboBox(p =>
+            {
+                p.TextField = "Descripcion";
+                p.ValueField = "IdCentroCosto";
+                p.ValueType = typeof(int);
+                p.DataSource = ViewBag.CentrosCosto;
+            });
         });
         settings.Columns.Add(c =>
         {
@@ -95,20 +104,8 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "IdProveedor";
-            c.Caption = "Proveedor";
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.EditorProperties().ComboBox(p =>
-            {
-                p.TextField = "NombreComercial";
-                p.ValueField = "IdProveedor";
-                p.ValueType = typeof(int);
-                p.DataSource = ViewBag.Proveedores;
-            });
-        });    
-        settings.Columns.Add(c =>
-        {
             c.FieldName = "Precio";
+            c.Settings.AllowSort = DefaultBoolean.False;
             c.EditorProperties().SpinEdit(p =>
             {
                 p.DisplayFormatString = "c";
@@ -120,6 +117,7 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "Descuento";
+            c.Settings.AllowSort = DefaultBoolean.False;
             c.EditorProperties().SpinEdit(p =>
             {
                 p.DisplayFormatString = "{0} %";
@@ -156,6 +154,19 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "Importe";
+            c.Settings.ShowEditorInBatchEditMode = false;
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.UnboundType = DevExpress.Data.UnboundColumnType.Decimal;
+            c.ReadOnly = true;
+            c.EditorProperties().SpinEdit(p =>
+            {
+                p.DisplayFormatString = "c";
+            });
+        });
+        settings.Columns.Add(c =>
+        {
+            c.Visible = false;
+            c.FieldName = "IdOrdenCompra";
             c.Settings.ShowEditorInBatchEditMode = false;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.UnboundType = DevExpress.Data.UnboundColumnType.Decimal;
