JOTM-30/10/2018-Detalles de diseño y catalogo de venta cilindro
*Diseño de menu
* Catalogo de ventas

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_main.xml
@@ -33,14 +33,14 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="50sp"
-                    android:layout_height="50sp"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="144dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="144dp"
                     android:layout_marginBottom="64dp"
-                    android:src="@drawable/logo"
+                    android:src="@mipmap/ic_sagas_launcher"
                     app:layout_constraintBottom_toTopOf="@+id/textView18"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -68,9 +68,9 @@
                     android:id="@+id/spinner_gasera"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="37dp"
+                    android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="37dp"
+                    android:layout_marginEnd="32dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="0"
                     android:paddingBottom="10dp"
