--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
@@ -58,4 +58,10 @@
         <attr name="ttlm_duration" format="integer" />
         <attr name="android:layout_margin" />
     </declare-styleable>
+
+    <style name="AlertDialog" parent="Base.Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textColorPrimary">@color/primaryTextColor</item>
+        <item name="android:colorAccent">@color/primaryTextColor</item>
+    </style>
 </resources>
