--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
@@ -43,4 +43,9 @@
     <style name="ActionBarTitleStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/textcolorButton</item>
     </style>
+    <style name="AlertDialog" parent="Base.Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textColorPrimary">@color/primaryTextColor</item>
+        <item name="colorAccent">@color/primaryTextColor</item>
+    </style>
 </resources>
