--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/menu_list_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/menu_list_item.xml
@@ -1,55 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayoutMenu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingBottom="3sp">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="1sp"
+        android:layout_marginBottom="1sp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="1sp">
 
-        <TextView
-            android:id="@+id/textViewRuta"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:textSize="20dp"
-            android:text="Prueba" />
+            android:layout_marginTop="5sp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textViewRuta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:paddingTop="5sp"
+                android:paddingBottom="5sp"
+                android:text="Prueba"
+                android:textSize="20dp" />
 
-    <LinearLayout
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40sp"
+            android:layout_marginBottom="2sp"
+            android:orientation="horizontal"
+            android:paddingTop="25sp">
+
+            <ImageView
+                android:id="@+id/image_view_menu_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5sp"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:id="@+id/menu_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingTop="15sp"
+                android:paddingBottom="15sp"
+                android:text="sample"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                tools:ignore="InefficientWeight" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="5sp"
+                android:src="@drawable/right"
+                tools:ignore="ContentDescription" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    <!--<View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/image_view_menu_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/menu_item_name"
-            android:layout_width="2dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:textSize="30dp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/right" />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3px"
-        android:background="@color/colorButtonLogin"/>
+        android:layout_height="1dp"
+        android:background="@color/colorButtonLogin" />-->
 </LinearLayout>
