--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
@@ -193,12 +193,12 @@
 
             <Button
                 android:id="@+id/registrar_button"
+                style="@style/SagasTheme.Button"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                style="@style/SagasTheme.Button"
                 android:minWidth="160dp"
                 android:text="@string/registrar"
                 android:textColor="@color/colorTextButtonLogin"
