--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
@@ -1,59 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayoutMenu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:layout_marginBottom="1sp"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="1sp"
+        android:layout_marginBottom="1dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="1dp">
 
-        <TextView
-            android:id="@+id/textViewRuta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="Prueba"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/image_view_menu_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/menu_item_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:layout_marginTop="5sp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textViewRuta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="Prueba"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/right" />
-    </LinearLayout>
-    <View
+            android:layout_marginTop="25sp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image_view_menu_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:id="@+id/menu_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:layout_weight="1"
+                android:text="sample"
+                android:textAlignment="center"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/right" />
+        </LinearLayout>
+
+        <!--<View
         android:layout_width="match_parent"
-        android:layout_height="3px"
-        android:background="@color/colorButtonLogin"/>
+        android:layout_height="1px"
+        android:background="@color/colorButtonLogin" />-->
+    </android.support.v7.widget.CardView>
 </LinearLayout>
